--- a/dest1/Dockerfile
+++ b/dest1/Dockerfile
@@ -6,14 +6,14 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o dest1 .
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
 # application
 FROM alpine:latest
 
 WORKDIR /root/
 RUN apk --no-cache add ca-certificates curl
-COPY --from=builder /app/dest1 .
+COPY --from=builder /app/main .
 
 EXPOSE 8080
-CMD ["./dest1"]
+CMD ["./main"]
