--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -2,9 +2,8 @@
 FROM golang:latest as builder
 MAINTAINER 16yuki0702
 
+ENV GO111MODULE=on
 WORKDIR /app
-COPY go.mod go.sum ./
-RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
 
