--- a/dest1/app.yaml
+++ b/dest1/app.yaml
@@ -25,12 +25,15 @@ spec:
     spec:
       restartPolicy: Always
       containers:
-      - image: image-registry.openshift-image-registry.svc:5000/sample-tracing/dest1:latest
+      - image: image-registry.openshift-image-registry.svc:5000/sample-tracing/gateway:latest
         imagePullPolicy: Always
         name: dest1
         ports:
         - containerPort: 8080
           protocol: TCP
+        envFrom:
+        - configMapRef:
+            name: dest1-cfg
 ---
 apiVersion: v1
 kind: Service
@@ -48,3 +51,12 @@ spec:
   selector:
     app: dest1
     deploymentconfig: dest1
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dest1-cfg
+data:
+  SERVICE_NAME: "dest1"
+  SERVICE_NUM: "3"
+  FORWARD2: "http://dest2-svc:8080"
