--- a/dest3/app.yaml
+++ b/dest3/app.yaml
@@ -25,12 +25,15 @@ spec:
     spec:
       restartPolicy: Always
       containers:
-      - image: image-registry.openshift-image-registry.svc:5000/sample-tracing/dest3:latest
+      - image: image-registry.openshift-image-registry.svc:5000/sample-tracing/gateway:latest
         imagePullPolicy: Always
         name: dest3
         ports:
         - containerPort: 8080
           protocol: TCP
+        envFrom:
+        - configMapRef:
+            name: dest3-cfg
 ---
 apiVersion: v1
 kind: Service
@@ -48,3 +51,11 @@ spec:
   selector:
     app: dest3
     deploymentconfig: dest3
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dest3-cfg
+data:
+  SERVICE_NAME: "dest3"
+  SERVICE_NUM: "3"
