--- a/dest3/app.yaml
+++ b/dest3/app.yaml
@@ -30,7 +30,6 @@ spec:
         name: dest3
         ports:
         - containerPort: 8080
-          protocol: TCP
         envFrom:
         - configMapRef:
             name: dest3-cfg
@@ -38,15 +37,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: dest3-svc
+  name: dest3
   labels:
-    app: dest3-svc
-    service: dest3-svc
+    app: dest3
+    service: dest3
 spec:
   ports:
-  - name: 8080-tcp
+  - name: http
     port: 8080
-    protocol: TCP
     targetPort: 8080
   selector:
     app: dest3
