--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: quay.io/openshift-pipeline/openshift-cli:latest
 
 stages:
+  - build
   - deploy
 
 variables:
@@ -8,12 +9,18 @@ variables:
 
 before_script:
   - oc login $OPENSHIFT_ADDRESS --token=$OPENSHIFT_TOKEN --insecure-skip-tls-verify
+  - oc project $OPENSHIFT_PROJECT
+
+production_build:
+  stage: build
+  only:
+    - master
+  script: |
+    ./build.sh
 
 production_deploy:
   stage: deploy
   only:
     - master
   script: |
-    oc project $OPENSHIFT_PROJECT
-    ./build.sh
     ./deploy.sh
