--- a/tekton/triggers/pipeline.yaml
+++ b/tekton/triggers/pipeline.yaml
@@ -24,6 +24,8 @@ spec:
     - name: deploy
       taskRef:
         name: deploy
+      runAfter:
+        - build-docker-image
 ---
 apiVersion: tekton.dev/v1alpha1
 kind: Task
@@ -103,7 +105,8 @@ spec:
   - name: build
     image: quay.io/buildah/stable
     workingdir: /workspace/source-repo
-    command: ['buildah', 'bud', '--tls-verify=false', '--layers', '-f', '.', '-t', '$(outputs.resources.builtImage.url)', '.']
+    #command: ['buildah', 'bud', '--tls-verify=false', '--layers', '-f', '.', '-t', '$(outputs.resources.builtImage.url)', '.']
+    command: ['ls', '-l']
     volumeMounts:
     - name: varlibcontainers
       mountPath: /var/lib/containers
