--- a/tekton/pipeline-run.yaml
+++ b/tekton/pipeline-run.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   pipelineRef:
     name: tracing-pipeline
-  serviceAccount: 'pipeline'
+  serviceAccountName: 'pipeline'
   resources:
   - name: app-source
     resourceRef:
