--- a/dest2/app.yaml
+++ b/dest2/app.yaml
@@ -1,19 +1,12 @@
-apiVersion: apps.openshift.io/v1
-kind: DeploymentConfig
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
+  name: dest2-v1
   labels:
     app: dest2
-  name: dest2
+    version: v1
 spec:
   replicas: 1
-  revisionHistoryLimit: 2
-  selector:
-    app: dest2
-    deploymentconfig: dest2
-  strategy:
-    activeDeadlineSeconds: 21600
-    resources: {}
-    type: Rolling
   template:
     metadata:
       annotations:
@@ -21,18 +14,16 @@ spec:
       labels:
         app: dest2
         version: v1
-        deploymentconfig: dest2
     spec:
-      restartPolicy: Always
       containers:
-      - image: image-registry.openshift-image-registry.svc:5000/sample-tracing/gateway:latest
+      - name: dest2
+        image: image-registry.openshift-image-registry.svc:5000/sample-tracing/gateway:latest
         imagePullPolicy: Always
-        name: dest2
         ports:
         - containerPort: 8080
         envFrom:
         - configMapRef:
-            name: dest2-cfg
+            name: dest2-v1-cfg
 ---
 apiVersion: v1
 kind: Service
@@ -48,12 +39,11 @@ spec:
     targetPort: 8080
   selector:
     app: dest2
-    deploymentconfig: dest2
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: dest2-cfg
+  name: dest2-v1-cfg
 data:
-  SERVICE_NAME: "dest2"
+  SERVICE_NAME: "dest2-v1"
   SERVICE_NUM: "3"
